small refactoring + tests